<resources>
    <string name="app_name">Minhas Figurinhas</string>
    <string name="quantidade_de_figurinhas">Quantidade de Figurinhas</string>
    <string name="brilhantes">Brilhantes?</string>
    <string name="categoria">Categoria</string>
    <string name="outros">Outros</string>
    <string name="country">País</string>
    <string name="brasil">Brasil</string>
    <string name="album_title">Título do Álbum</string>
    <string name="album_registry">Cadastro de Álbum</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string-array name="spinnerOptions">
        <item>Futebol</item>
        <item>Filmes</item>
        <item>Desenhos Animados</item>
        <item>Super-Heróis</item>
        <item>Esportes</item>
        <item>Outros</item>
    </string-array>

</resources>